2006-06-11  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in:
	* src/Makefile.am:
	* src/Yelper.cpp:
	* src/Yelper.h:
	* src/yelp-gecko-services.cpp:
	* src/yelp-gecko-services.h:
	* src/yelp-gecko-utils.cpp:
	* src/yelp-gecko-utils.h:
	* src/yelp-html.cpp:
	* src/yelp-html.h:
	* src/yelp-window.c: (window_find_again):
	Don't use mozilla's internal string API, and drop support for gecko 1.7
	and non-toolkit geckos. Bug #343950.

	* m4/gecko.m4:
	Updated from Epiphany.

2006-06-10  Don Scorgie  <dscorgie@cvs.gnome.org>

	* data/ui/yelp-search-ui.xml: 
	Fix search entry to be on correct toolbar
	
	* src/yelp-window.c: 
	* data/ui/yelp-ui.xml: 
	Add a deep history framework (bug #67966)
	
	* stylesheets/info2html.xsl: 
	* src/yelp-info-parser.c: 
	Make *Notes into hyperlinks (bug #343524)
	
2006-06-06  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-gecko-utils.cpp: 
	Make monospace fonts change size when asked (bug #344003)

2006-05-30  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-utils.c: 
	Fix man page fallback for info pages again
	
        * src/yelp-toc-pager.c:
        Escape & characters when encountered in info processing (fixes #343372)

2006-05-29  Brent Smith  <gnome@nextreality.net>

	* src/yelp-toc-pager.c: (process_mandir_pending):
	* src/yelp-utils.c: (yelp_doc_info_new):
	fix two small memory leaks.

2006-05-29  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-utils.c: 
	Fix loading of info pages from subdirs in some cases
	
	* src/gtkentryaction.c: 
	Free text after use

	* src/yelp-info-parser.c: 
	Assume the tag tables given in info files are wrong.  They mostly are.
	Instead, we set the tag tables to the correct offsets ourselves
	Also, fix a problem loading certain info sections from menus
	
2006-06-28  Frederic Peters <fpeters@0d.be>

	* src/yelp-search-pager.c:
	* stylesheets/search2html.xsl:
	more helpful message when there are no search results (fixes #341798)
	search results message can be translated (fixes #341689)