@@ -1,3 +1,8 @@
+2006-06-11  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-window.c: 
+	Don't auto-expand sections in left pane (bug #167070)
+
 2006-06-11  Christian Persch  <chpe@cvs.gnome.org>
 
 	* configure.in:
